@@ -17,6 +17,8 @@
 4. Fix OSX executable name for case-sensitive filesystems.
 5. Hide ratings widgets, etc, in tag editor for devices and Mopidy, etc.
 6. Use Control+Alt+Number as shortcut to toggle an output.
+7. Don't allow to set short-cuts for collections and outputs actions, as these
+   are menus.
 
 1.5.1
 -----
